Non-stable commit